# simple_chat

./: README.md  app.py  ingestion.py  llm.py  pyproject.toml  vector_store.py
src/: config.py  ingestion.py
